[gd_scene load_steps=12 format=3 uid="uid://62sdd6gu040k"]

[ext_resource type="Script" uid="uid://byf0ya2hpaotc" path="res://fish/fish.gd" id="1_jx7ej"]
[ext_resource type="ArrayMesh" uid="uid://cl6jajx0bq85o" path="res://fish/fish_head.res" id="2_sgogb"]
[ext_resource type="Material" uid="uid://cjuvo5733u4pv" path="res://fish/types/blue.tres" id="2_wy1ge"]
[ext_resource type="Shader" uid="uid://doksdep1pslhv" path="res://outline.gdshader" id="4_12uvg"]
[ext_resource type="Shader" uid="uid://xeoi32xushxd" path="res://fish/pulse.gdshader" id="5_x746t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x746t"]
render_priority = -1
shader = ExtResource("4_12uvg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sgxm1"]
render_priority = -1
shader = ExtResource("5_x746t")
shader_parameter/color = Color(0.683411, 0.346516, 0.30492, 0.45098)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jx7ej"]
height = 6.26953
radius = 0.429199

[sub_resource type="Animation" id="Animation_x746t"]
resource_name = "pulse"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.5, 1.5, 1.5), Vector3(2.5, 2.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head4:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.5, 1.5, 1.5), Vector3(2.5, 2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_sgxm1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5, 1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head4:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5, 1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_en3yg"]
_data = {
&"RESET": SubResource("Animation_sgxm1"),
&"pulse": SubResource("Animation_x746t")
}

[node name="fish" type="Node3D" node_paths=PackedStringArray("head") groups=["fish_whole"]]
script = ExtResource("1_jx7ej")
fish_type = "red"
head = NodePath("head")
segment_spacing = 0.5
fish_shape = Array[float]([0.4, 0.35, 0.25, 0.2, 0.4])

[node name="head" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_wy1ge")
mesh = ExtResource("2_sgogb")

[node name="head2" type="MeshInstance3D" parent="head"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
material_override = SubResource("ShaderMaterial_x746t")
cast_shadow = 0
mesh = ExtResource("2_sgogb")
skeleton = NodePath("../..")

[node name="head3" type="MeshInstance3D" parent="head"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
visible = false
material_override = SubResource("ShaderMaterial_sgxm1")
cast_shadow = 0
mesh = ExtResource("2_sgogb")
skeleton = NodePath("../..")

[node name="head4" type="MeshInstance3D" parent="head"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
visible = false
material_override = SubResource("ShaderMaterial_sgxm1")
cast_shadow = 0
mesh = ExtResource("2_sgogb")
skeleton = NodePath("../..")

[node name="Label3D" type="Label3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.792548, 0)
visible = false
billboard = 1
text = "skdjfhergkjdnfg"

[node name="near_rope" type="Area3D" parent="head" groups=["fish"]]
collision_layer = 4
collision_mask = 11

[node name="CollisionShape3D" type="CollisionShape3D" parent="head/near_rope"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.341797, 0)
shape = SubResource("CylinderShape3D_jx7ej")

[node name="anim" type="AnimationPlayer" parent="head"]
libraries = {
&"": SubResource("AnimationLibrary_en3yg")
}

[connection signal="area_entered" from="head/near_rope" to="." method="_on_near_rope_area_entered"]
[connection signal="area_exited" from="head/near_rope" to="." method="_on_near_rope_area_exited"]
[connection signal="body_entered" from="head/near_rope" to="." method="_on_near_rope_body_entered"]
